--- a/index.html
+++ b/index.html
@@ -27,10 +27,66 @@
             </div>
         </div>
     </header>
-<img src="img/baby-yoda.svg" alt="">
-<img src="img/banana.svg" alt="">
-<img src="img/girl.svg" alt="">
-<img src="img/viking.svg" alt="">
+    <main>
+        <section class="products container">
+            <h2 class="products__text">Product list</h2>
+            <div class="products__list">
+                <article class="product">
+                    <img class="product__img" src=" img/baby-yoda.svg" alt="Baby Yoda">
+                    <h3 class="product__title">
+                        Baby Yoda
+                    </h3>
+                    <p class="product_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi perferendis earum soluta consectetur praesentium quisquam odio placeat sed dolore quam exercitationem incidunt eum nemo ducimus vel officiis doloribus, aspernatur esse!
+
+                    </p>
+                    <div class="product__buttons">
+                        <button class="button button-card">Info</button>
+                        <button class="button button-card">Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img class="product__img" src=" img/banana.svg" alt="Baby Yoda">
+                    <h3 class="product__title">
+                        Banana
+                    </h3>
+                    <p class="product_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi perferendis earum soluta consectetur praesentium quisquam odio placeat sed dolore quam exercitationem incidunt eum nemo ducimus vel officiis doloribus, aspernatur esse!
+
+                    </p>
+                    <div class="product__buttons">
+                        <button class="button button-card">Info</button>
+                        <button class="button button-card">Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img class="product__img" src=" img/viking.svg" alt="Viking">
+                    <h3 class="product__title">
+                        Viking
+                    </h3>
+                    <p class="product_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi perferendis earum soluta consectetur praesentium quisquam odio placeat sed dolore quam exercitationem incidunt eum nemo ducimus vel officiis doloribus, aspernatur esse!
+
+                    </p>
+                    <div class="product__buttons">
+                        <button class="button button-card">Info</button>
+                        <button class="button button-card">Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img class="product__img" src=" img/girl.svg" alt="Girl">
+                    <h3 class="product__title">
+                        Girl
+                    </h3>
+                    <p class="product_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi perferendis earum soluta consectetur praesentium quisquam odio placeat sed dolore quam exercitationem incidunt eum nemo ducimus vel officiis doloribus, aspernatur esse!
+
+                    </p>
+                    <div class="product__buttons">
+                        <button class="button button-card">Info</button>
+                        <button class="button button-card">Buy</button>
+                    </div>
+                </article>
+        </section>
+    </main>
 </body>
+
+</html>
 
 </html>
